<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DebtsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@drawable/white_style"
        android:elevation="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/i_give"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/i_give"/>

            <Switch
                android:id="@+id/swith"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="switch_click"
                android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/give_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack60"
                android:text="@string/give_me"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="enterDate"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/activity_text_size"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/data"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="data_and_time_text"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:src="@drawable/ic_expand_more_black_24dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="enterTime"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_text_size"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/roboto_thin"
                    android:text="@string/time"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textTime2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="19sp"
                        android:layout_marginTop="1dp"
                        android:text="data_and_time_text"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:src="@drawable/ic_expand_more_black_24dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/colorBlack95"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/enterName"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textColorLink="@color/colorBlack"
            android:textCursorDrawable="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBlack95"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/sumDebt"
                android:layout_weight="1"
                android:maxLength="9"
                android:inputType="numberDecimal"
                android:textColorLink="@color/colorBlack"
                android:textCursorDrawable="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/activity_text_size"
                android:text="BYN"/>

        </LinearLayout>

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/colorBlack95"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/comment"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:textColorLink="@color/colorBlack"
            android:textCursorDrawable="@color/colorBlack" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="doneClick"
            android:background="@drawable/button_done"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>